project/stage/semantic_tests/reject/duplicate_id_decl.ul
void main() {
    return;
}

int foo(int a, int b) {
    int x;
    int x;
}
